# rust-sel4

./: .claudignore  Cargo.nix  Cargo.toml  Makefile  rust-toolchain.toml
.cargo/: config-no-world.toml  config.toml
.reuse/: dep5
crates/capdl-initializer/: Cargo.toml
crates/capdl-initializer/add-spec/: Cargo.toml
crates/capdl-initializer/core/: Cargo.toml
crates/capdl-initializer/embed-spec/: Cargo.toml
crates/capdl-initializer/types/: Cargo.toml
crates/capdl-initializer/with-embedded-spec/: Cargo.toml
crates/capdl-initializer/with-embedded-spec/build-env/: Cargo.toml
crates/capdl-initializer/with-embedded-spec/embedded-spec/: Cargo.toml
crates/capdl-initializer/with-embedded-spec/embedded-spec/validate/: Cargo.toml
crates/examples/sel4cp/banscii/pds/artist/: Cargo.toml
crates/examples/sel4cp/banscii/pds/assistant/: Cargo.toml
crates/examples/sel4cp/banscii/pds/assistant/core/test/: Cargo.toml
crates/private/meta/: Cargo.toml
crates/private/support/sel4-simple-task/runtime/: Cargo.toml
crates/private/support/sel4-simple-task/runtime/config/cli/: Cargo.toml
crates/private/support/sel4-simple-task/runtime/config/types/: Cargo.toml
crates/private/support/sel4-simple-task/runtime/macros/: Cargo.nix  Cargo.toml
crates/private/tests/capdl/http-server/components/test/: Cargo.toml
crates/private/tests/capdl/http-server/components/test/server-core/: Cargo.toml
crates/private/tests/capdl/utcover/components/test/: Cargo.nix  Cargo.toml
crates/private/tests/capdl/utcover/components/test/src/: main.rs
crates/private/tests/root-task/backtrace/: Cargo.toml
crates/private/tests/root-task/c/: Cargo.toml
crates/private/tests/root-task/core-libs/: Cargo.toml
crates/sddf/: Cargo.nix  Cargo.toml
crates/sel4/: Cargo.nix  Cargo.toml
crates/sel4-atomic-ptr/: Cargo.toml
crates/sel4-backtrace/: Cargo.nix  Cargo.toml
crates/sel4-backtrace/simple/: Cargo.toml
crates/sel4-bare-metal-test-runner/: Cargo.nix  Cargo.toml
crates/sel4-bounce-buffer-allocator/: Cargo.toml
crates/sel4-capdl-initializer/: Cargo.nix  Cargo.toml
crates/sel4-dlmalloc/: Cargo.nix  Cargo.toml
crates/sel4-driver-interfaces/: Cargo.nix  Cargo.toml
crates/sel4-elf-header/: Cargo.toml
crates/sel4-externally-shared/: Cargo.toml
crates/sel4-generate-target-specs/: Cargo.toml
crates/sel4-hal-adapters/: Cargo.toml
crates/sel4-immediate-sync-once-cell/: Cargo.toml
crates/sel4-immutable-cell/: Cargo.toml
crates/sel4-initialize-tls/: Cargo.toml
crates/sel4-kernel-loader/: Cargo.nix  Cargo.toml  build.rs
crates/sel4-logging/: Cargo.toml
crates/sel4-microkit/: Cargo.toml
crates/sel4-mod-in-out-dir/: Cargo.nix  Cargo.toml
crates/sel4-newlib/: Cargo.nix  Cargo.toml
crates/sel4-one-ref-cell/: Cargo.toml
crates/sel4-panicking/: Cargo.nix  Cargo.toml
crates/sel4-platform-info/: Cargo.toml
crates/sel4-render-elf-with-data/: Cargo.toml
crates/sel4-reserve-tls-on-stack/: Cargo.toml
crates/sel4-reset/: Cargo.toml
crates/sel4-root-task/: Cargo.nix  Cargo.toml
crates/sel4-runtime-common/: Cargo.nix  Cargo.toml
crates/sel4-rustfmt-helper/: Cargo.toml
crates/sel4-shared-ring-buffer/: Cargo.toml
crates/sel4-supervising/: Cargo.nix  Cargo.toml
crates/sel4-sync/: Cargo.toml
crates/sel4-test-harness/: Cargo.toml
crates/sel4-vmm/: Cargo.nix  Cargo.toml
crates/sel4/config/macros/: Cargo.toml
crates/sel4/sys/: Cargo.toml
crates/sel4/sys/src/: ipc_buffer.rs
crates/sel4/sys/src/fault/arch/: aarch32.rs  aarch64.rs  mod.rs
crates/sel4/sys/src/syscalls/helpers/arch/: mod.rs
crates/sel4/sys/wrappers/: Cargo.toml
crates/sel4cp/: Cargo.toml
crates/sel4cp/postcard/: Cargo.toml
crates/sel4cp/src/: passivity.rs
distribution/docker/: Dockerfile  Dockerfile.dockerignore  Makefile
hacking/: Cargo.toml
hacking/cargo-manifest-management/: Makefile  direct-dependency-allow-list.toml  manifest-scope.nix  manual-manifests.nix
hacking/cargo-manifest-management/tool/crates/manage-vscode-exclude-list/: Cargo.toml
hacking/cargo-manifest-management/tool/crates/manage-vscode-exclude-list/src/: main.rs
hacking/docker/: Dockerfile  Dockerfile.bootstrap  Dockerfile.old  Makefile  bashrc_extra  bootstrap.nix  default.nix  home.nix  inputrc  nix.conf  setup.sh
hacking/nix/: default.nix  flake.nix
hacking/vscode/: .gitignore  Makefile  Makeifle  cargo-env-defaults-wrapper  excludes.txt  log.txt  radw.txt  run-cargo-wrapper  rust-analyzer-defaults-wrapper  rust-analyzer-wrapper  st-old.txt  st.txt  x.sh  xxx.txt
hacking/vscode/cargo-env-wrapper/: Cargo.toml
hacking/vscode/cargo-env-wrapper/src/: main.rs
support/targets/: aarch64-sel4-microkit-minimal.json  aarch64-sel4-microkit-resettable-minimal.json  aarch64-sel4-microkit-resettable-unwind.json  aarch64-sel4-microkit-resettable.json  aarch64-sel4-microkit-unwind.json  aarch64-sel4-microkit.json  aarch64-sel4-musl.json  aarch64-sel4-resettable-minimal.json  aarch64-sel4-resettable-musl.json  aarch64-sel4-resettable-unwind-musl.json  aarch64-sel4-resettable-unwind.json  aarch64-sel4-resettable.json  aarch64-sel4-roottask-resettable-minimal.json  aarch64-sel4-roottask-resettable-musl.json  aarch64-sel4-roottask-resettable-unwind-musl.json  aarch64-sel4-roottask-resettable-unwind.json  aarch64-sel4-roottask-resettable.json  aarch64-sel4-unwind-musl.json  aarch64-sel4-unwind.json  aarch64-sel4.json  armv7a-sel4-musl.json  armv7a-sel4-resettable-minimal.json  armv7a-sel4-resettable-musl.json  armv7a-sel4-resettable.json  armv7a-sel4-roottask-resettable-minimal.json  armv7a-sel4-roottask-resettable-musl.json  armv7a-sel4-roottask-resettable.json  armv7a-sel4.json  riscv32imac-sel4-musl.json  riscv32imac-sel4-resettable-minimal.json  riscv32imac-sel4-resettable-musl.json  riscv32imac-sel4-resettable-unwind-musl.json  riscv32imac-sel4-resettable-unwind.json  riscv32imac-sel4-resettable.json  riscv32imac-sel4-roottask-resettable-minimal.json  riscv32imac-sel4-roottask-resettable-musl.json  riscv32imac-sel4-roottask-resettable-unwind-musl.json  riscv32imac-sel4-roottask-resettable-unwind.json  (+84 more)
(+457 files in other folders)
