[package]
name = "capdl-initializer"
version = "0.1.0"
authors = ["Nick Spinale <nick.spinale@coliasgroup.com>"]
edition = "2021"
license = "BSD-2-Clause"

[dependencies]
capdl-initializer-core = { path = "./core", version = "0.1.0" }
log = "0.4.17"
postcard = { version = "1.0.2", default-features = false, features = ["alloc"] }
sel4 = { path = "../sel4", version = "0.1.0" }
sel4-dlmalloc = { path = "../sel4-dlmalloc", version = "0.1.0" }
sel4-logging = { path = "../sel4-logging", version = "0.1.0" }
sel4-sync = { path = "../sel4-sync", version = "0.1.0" }

[dependencies.capdl-initializer-types]
path = "./types"
version = "0.1.0"
features = ["alloc", "serde", "deflate"]

[dependencies.sel4-root-task]
path = "../sel4-root-task"
version = "0.1.0"
default-features = false
features = ["alloc", "single-threaded"]
