[package]
name = "capdl-initializer-with-embedded-spec"
version = "0.1.0"
authors = ["Nick Spinale <nick.spinale@coliasgroup.com>"]
edition = "2021"
license = "BSD-2-Clause"

[features]
deflate = [
    "capdl-initializer-with-embedded-spec-embedded-spec/deflate",
    "capdl-initializer-with-embedded-spec-embedded-spec-validate/deflate"
]

[dependencies]
capdl-initializer-core = { path = "../core", version = "0.1.0" }
capdl-initializer-types = { path = "../types", version = "0.1.0" }
capdl-initializer-with-embedded-spec-embedded-spec = { path = "./embedded-spec", version = "0.1.0" }
sel4 = { path = "../../sel4", version = "0.1.0" }
sel4-logging = { path = "../../sel4-logging", version = "0.1.0" }

[dependencies.sel4-root-task]
path = "../../sel4-root-task"
version = "0.1.0"
default-features = false
features = ["single-threaded"]

[build-dependencies]

[build-dependencies.capdl-initializer-with-embedded-spec-embedded-spec-validate]
path = "./embedded-spec/validate"
version = "0.1.0"
