[package]
name = "meta"
version = "0.1.0"
authors = ["Nick Spinale <nick.spinale@coliasgroup.com>"]
edition = "2021"
license = "BSD-2-Clause"

[features]
sel4-root-task = ["dep:sel4-root-task"]
sel4cp = ["dep:sel4cp", "sel4cp-postcard"]

[dependencies]
cfg-if = "1.0.0"
log = "0.4.17"
sel4 = { path = "../../sel4", version = "0.1.0" }
sel4-async-network = { path = "../../sel4-async/network", version = "0.1.0" }
sel4-async-request-statuses = { path = "../../sel4-async/request-statuses", version = "0.1.0" }
sel4-bounce-buffer-allocator = { path = "../../sel4-bounce-buffer-allocator", version = "0.1.0" }
sel4-config = { path = "../../sel4/config", version = "0.1.0" }
sel4-externally-shared = { path = "../../sel4-externally-shared", version = "0.1.0" }
sel4-logging = { path = "../../sel4-logging", version = "0.1.0" }
sel4-shared-ring-buffer = { path = "../../sel4-shared-ring-buffer", version = "0.1.0" }
sel4-sync = { path = "../../sel4-sync", version = "0.1.0" }
sel4-sys = { path = "../../sel4/sys", version = "0.1.0" }
sel4cp = { path = "../../sel4cp", version = "0.1.0", features = ["full"], optional = true }
sel4cp-postcard = { path = "../../sel4cp/postcard", version = "0.1.0", optional = true }

[dependencies.sel4-async-single-threaded-executor]
path = "../../sel4-async/single-threaded-executor"
version = "0.1.0"

[dependencies.sel4-root-task]
path = "../../sel4-root-task"
version = "0.1.0"
features = ["full"]
optional = true

[target."cfg(not(target_arch = \"x86_64\"))".dependencies]
sel4-platform-info = { path = "../../sel4-platform-info", version = "0.1.0", optional = true }

[target."cfg(not(target_thread_local))".dependencies]
sel4 = { path = "../../sel4", version = "0.1.0", features = ["single-threaded"] }
