[package]
name = "sel4-backtrace-simple"
version = "0.1.0"
authors = ["Nick Spinale <nick.spinale@coliasgroup.com>"]
edition = "2021"
license = "BSD-2-Clause"

[features]
alloc = ["sel4-backtrace/alloc"]

[dependencies]
sel4-backtrace = { path = "..", version = "0.1.0", features = ["postcard", "unwinding"] }
sel4-panicking-env = { path = "../../sel4-panicking/env", version = "0.1.0" }
