[package]
name = "sel4-sys"
version = "0.1.0"
authors = ["Nick Spinale <nick.spinale@coliasgroup.com>"]
build = "build/main.rs"
edition = "2021"
license = "BSD-2-Clause"

[features]
wrappers = []

[dependencies]
log = "0.4.17"
sel4-bitfield-types = { path = "../bitfield-types", version = "0.1.0" }
sel4-config = { path = "../config", version = "0.1.0" }

[build-dependencies]
bindgen = "0.64.0"
glob = "0.3.0"
proc-macro2 = "1.0.50"
quote = "1.0.23"
regex = "1.7.0"
sel4-bitfield-parser = { path = "../bitfield-parser", version = "0.1.0" }
sel4-build-env = { path = "../build-env", version = "0.1.0" }
sel4-config = { path = "../config", version = "0.1.0" }
sel4-config-data = { path = "../config/data", version = "0.1.0" }
sel4-rustfmt-helper = { path = "../../sel4-rustfmt-helper", version = "0.1.0" }
syn = "1.0.107"
xmltree = "0.10.3"
