#
# Copyright 2024, Colias Group, LLC
#
# SPDX-License-Identifier: BSD-2-Clause
#

[package]
name = "cargo-env-wrapper"
version = "0.1.0"
authors = ["Nick Spinale <nick.spinale@coliasgroup.com>"]
edition = "2024"
license = "BSD-2-Clause"

[dependencies]
anyhow = "1.0"
serde_json = "1.0"
cargo_metadata = "0.23.1"
clap = { version = "4.6", features = ["derive"] }
jsonc-parser = { version = "0.32", features = ["serde"] }
