[package]
name = "capdl-initializer-with-embedded-spec-embedded-spec"
version = "0.1.0"
authors = ["Nick Spinale <nick.spinale@coliasgroup.com>"]
edition = "2021"
license = "BSD-2-Clause"

[features]
deflate = ["capdl-initializer-types/deflate"]

[dependencies]

[dependencies.capdl-initializer-types]
path = "../../types"
version = "0.1.0"
features = ["borrowed-indirect"]

[build-dependencies]
capdl-initializer-embed-spec = { path = "../../embed-spec", version = "0.1.0" }
capdl-initializer-types = { path = "../../types", version = "0.1.0" }
capdl-initializer-with-embedded-spec-build-env = { path = "../build-env", version = "0.1.0" }
sel4-rustfmt-helper = { path = "../../../sel4-rustfmt-helper", version = "0.1.0" }
serde_json = "1.0.87"
