[package]
name = "sel4-config-macros"
version = "0.1.0"
authors = ["Nick Spinale <nick.spinale@coliasgroup.com>"]
edition = "2021"
license = "BSD-2-Clause"

[lib]
proc-macro = true

[dependencies]
sel4-config-data = { path = "../data", version = "0.1.0" }
sel4-config-generic-macro-impls = { path = "../generic/macro-impls", version = "0.1.0" }
