[package]
name = "sel4-simple-task-runtime"
version = "0.1.0"
authors = ["Nick Spinale <nick.spinale@coliasgroup.com>"]
edition = "2021"
license = "BSD-2-Clause"

[features]
alloc = [
    "sel4-backtrace/alloc",
    "sel4-backtrace-simple/alloc",
    "sel4-simple-task-threading/alloc",
    "serde_json?/alloc"
]
default = ["serde_json", "alloc"]
serde_json = ["dep:serde_json"]

[dependencies]
postcard = { version = "1.0.2", default-features = false, features = [] }
sel4 = { path = "../../../../sel4", version = "0.1.0" }
sel4-backtrace-simple = { path = "../../../../sel4-backtrace/simple", version = "0.1.0" }
sel4-dlmalloc = { path = "../../../../sel4-dlmalloc", version = "0.1.0" }
sel4-panicking = { path = "../../../../sel4-panicking", version = "0.1.0" }
sel4-panicking-env = { path = "../../../../sel4-panicking/env", version = "0.1.0" }
sel4-reserve-tls-on-stack = { path = "../../../../sel4-reserve-tls-on-stack", version = "0.1.0" }
sel4-simple-task-runtime-config-types = { path = "./config/types", version = "0.1.0" }
sel4-simple-task-runtime-macros = { path = "./macros", version = "0.1.0" }
sel4-simple-task-threading = { path = "../threading", version = "0.1.0" }
sel4-sync = { path = "../../../../sel4-sync", version = "0.1.0" }
serde = { version = "1.0.147", default-features = false, features = [] }
serde_json = { version = "1.0.87", default-features = false, optional = true }

[dependencies.sel4-backtrace]
path = "../../../../sel4-backtrace"
version = "0.1.0"
features = ["unwinding", "postcard"]

[dependencies.sel4-immediate-sync-once-cell]
path = "../../../../sel4-immediate-sync-once-cell"
version = "0.1.0"

[dependencies.sel4-runtime-common]
path = "../../../../sel4-runtime-common"
version = "0.1.0"
features = ["tls", "unwinding"]
