[package]
name = "tests-root-task-backtrace"
version = "0.1.0"
authors = ["Nick Spinale <nick.spinale@coliasgroup.com>"]
edition = "2021"
license = "BSD-2-Clause"

[dependencies]
sel4 = { path = "../../../../sel4", version = "0.1.0" }
sel4-backtrace = { path = "../../../../sel4-backtrace", version = "0.1.0", features = ["full"] }

[dependencies.sel4-backtrace-embedded-debug-info]
path = "../../../../sel4-backtrace/embedded-debug-info"
version = "0.1.0"

[dependencies.sel4-backtrace-simple]
path = "../../../../sel4-backtrace/simple"
version = "0.1.0"
features = ["alloc"]

[dependencies.sel4-backtrace-types]
path = "../../../../sel4-backtrace/types"
version = "0.1.0"
features = ["full"]

[dependencies.sel4-root-task]
path = "../../../../sel4-root-task"
version = "0.1.0"
features = ["alloc", "single-threaded"]
