[package]
name = "tests-root-task-c"
version = "0.1.0"
authors = ["Nick Spinale <nick.spinale@coliasgroup.com>"]
edition = "2021"
license = "BSD-2-Clause"

[dependencies]
sel4 = { path = "../../../../sel4" }

[dependencies.sel4-root-task]
path = "../../../../sel4-root-task"
default-features = false
features = ["single-threaded"]

[build-dependencies]
cc = "1.0.76"
glob = "0.3.0"
