[package]
name = "tests-root-task-core-libs"
version = "0.1.0"
authors = ["Nick Spinale <nick.spinale@coliasgroup.com>"]
edition = "2021"
license = "BSD-2-Clause"

[dependencies]
sel4 = { path = "../../../../sel4", version = "0.1.0" }
sel4-config = { path = "../../../../sel4/config", version = "0.1.0" }
sel4-root-task = { path = "../../../../sel4-root-task", version = "0.1.0" }
sel4-sys = { path = "../../../../sel4/sys", version = "0.1.0" }
