[package]
name = "banscii-assistant"
version = "0.1.0"
authors = ["Nick Spinale <nick.spinale@coliasgroup.com>"]
edition = "2021"
license = "BSD-2-Clause"

[dependencies]
banscii-artist-interface-types = { path = "../artist/interface-types", version = "0.1.0" }
banscii-assistant-core = { path = "./core", version = "0.1.0" }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }

[dependencies.banscii-pl011-driver-interface-types]
path = "../pl011-driver/interface-types"
version = "0.1.0"

[dependencies.sel4-externally-shared]
path = "../../../../../sel4-externally-shared"
version = "0.1.0"
features = ["unstable", "alloc"]

[dependencies.sel4cp]
path = "../../../../../sel4cp"
version = "0.1.0"
default-features = false
features = ["alloc"]
