[package]
name = "tests-capdl-utcover-components-test"
version = "0.1.0"
authors = ["Nick Spinale <nick.spinale@coliasgroup.com>"]
edition = "2021"
license = "BSD-2-Clause"

[dependencies]
sel4 = { path = "../../../../../../sel4", version = "0.1.0" }
sel4-sync = { path = "../../../../../../sel4-sync", version = "0.1.0" }
serde = { version = "1.0.147", default-features = false, features = ["alloc", "derive"] }

[dependencies.sel4-simple-task-config-types]
path = "../../../../../support/sel4-simple-task/config-types"
version = "0.1.0"

[dependencies.sel4-simple-task-runtime]
path = "../../../../../support/sel4-simple-task/runtime"
version = "0.1.0"
